Document changing order

--- a/thesis-main/document/Bibliography.bib
+++ b/thesis-main/document/Bibliography.bib
@@ -112,3 +112,11 @@
   url     = {https://tts.readthedocs.io/en/latest/formatting_your_dataset.html#formatting-your-dataset}
   }
 
+@inproceedings{kim2021conditional,
+  title={Conditional variational autoencoder with adversarial learning for end-to-end text-to-speech},
+  author={Kim, Jaehyeon and Kong, Jungil and Son, Juhee},
+  booktitle={International Conference on Machine Learning},
+  pages={5530--5540},
+  year={2021},
+  organization={PMLR}
+}
