--- a/thesis-main/document/MainMatter/Background.tex
+++ b/thesis-main/document/MainMatter/Background.tex
@@ -136,7 +136,7 @@ WaveGrad es un modelo condicional para la generación de formas de onda que esti
 
 Para mejorar el poder expresivo del método con el fin de sintetizar formas de onda de voz de alta calidad, se aplican flujos de normalización a la distribución condicional previa y entrenamiento adversarial en el dominio de formas de ondas.
 
-El modelo VITS se describe principalmente en tres etapas: una formulación condicional de Autocodificador variacional; estimación de alineación derivada de la inferencia variacional; y entrenamiento adversarial para mejorar la calidad de la síntesis.
+El modelo VITS se describe principalmente en tres etapas: una formulación condicional de Autocodificador variacional; estimación de alineación derivada de la inferencia variacional; y entrenamiento adversarial para mejorar la calidad de la síntesis[\cite{kim2021conditional}].
 
 (***No se si explicar cada parte)
 
