State of the art enriched

--- a/thesis-main/document/Bibliography.bib
+++ b/thesis-main/document/Bibliography.bib
@@ -111,6 +111,14 @@
   title   = {Formatting Your Dataset},
   url     = {https://tts.readthedocs.io/en/latest/formatting_your_dataset.html#formatting-your-dataset}
   }
+  
+  @article{dinh2016density,
+  title={Density estimation using real nvp},
+  author={Dinh, Laurent and Sohl-Dickstein, Jascha and Bengio, Samy},
+  journal={arXiv preprint arXiv:1605.08803},
+  year={2016}
+}
+
 
 @inproceedings{kim2021conditional,
   title={Conditional variational autoencoder with adversarial learning for end-to-end text-to-speech},
@@ -120,3 +128,59 @@
   year={2021},
   organization={PMLR}
 }
+
+@article{kong2020hifi,
+  title={Hifi-gan: Generative adversarial networks for efficient and high fidelity speech synthesis},
+  author={Kong, Jungil and Kim, Jaehyeon and Bae, Jaekyoung},
+  journal={Advances in Neural Information Processing Systems},
+  volume={33},
+  pages={17022--17033},
+  year={2020}
+}
+
+@article{durkan2019neural,
+  title={Neural spline flows},
+  author={Durkan, Conor and Bekasov, Artur and Murray, Iain and Papamakarios, George},
+  journal={Advances in neural information processing systems},
+  volume={32},
+  year={2019}
+}
+
+@online{deep-voice,
+  author  = {Baidu},
+  title   = {Neural Voice Cloning with a Few Samples},
+  url     = {http://research.baidu.com/Blog/index-view?id=81}
+  }
+  
+  @article{arik2018neural,
+  title={Neural voice cloning with a few samples},
+  author={Arik, Sercan and Chen, Jitong and Peng, Kainan and Ping, Wei and Zhou, Yanqi},
+  journal={Advances in neural information processing systems},
+  volume={31},
+  year={2018}
+}
+
+  
+  @online{deep-voice3,
+  author  = {Baidu},
+  title   = {Neural Voice Cloning with a Few Samples},
+  url     = {http://research.baidu.com/Blog/index-view?id=81}
+  }
+  
+  @article{kim2020glow,
+  title={Glow-tts: A generative flow for text-to-speech via monotonic alignment search},
+  author={Kim, Jaehyeon and Kim, Sungwon and Kong, Jungil and Yoon, Sungroh},
+  journal={Advances in Neural Information Processing Systems},
+  volume={33},
+  pages={8067--8077},
+  year={2020}
+}
+
+@online{mozilla-doc,
+  author  = {Mozilla},
+  title   = {Mozilla TTS},
+  url     = {https://github.com/mozilla/TTS}
+  }
+
+
+
