--- a/thesis-main/document/MainMatter/Implementation.tex
+++ b/thesis-main/document/MainMatter/Implementation.tex
@@ -1,7 +1,7 @@
 \chapter{Detalles de Implementación y Experimentos}\label{chapter:implementation}
 
 \section{Instalación de la biblioteca Coqui}
-Coqui [\cite{coqui-doc}] es un repositorio de código abierto que implementa las últimas investigaciones en materia de síntesis de voz, como Tacotron 2 y VITS que son los modelos base utilizados en el presente proyecto. Este repositorio ha sido usado para generar modelos en más de 20 idiomas  y cuenta además con múltiples "recetas" para el entrenamiento de modelos. 
+Coqui [\cite{coqui-doc}] es un repositorio de código abierto que implementa las últimas investigaciones en materia de síntesis de voz, como Tacotron 2 y VITS que son los modelos base utilizados en el presente proyecto. Este repositorio ha sido usado para generar modelos en más de 20 idiomas  y cuenta además con múltiples ``recetas'' para el entrenamiento de modelos. 
 
 La biblioteca se instala de acuerdo a las instrucciones orientadas a desarrolladores en [\cite{coqui-doc}].
 Con esto ya es suficiente para probar los modelos preentrenados disponibles de Coqui.
@@ -9,17 +9,19 @@ Con esto ya es suficiente para probar los modelos preentrenados disponibles de C
 
 \section{Creación de base de datos con voces cubanas.}
 
-\subsubsection{Qué hace a un buen Dataset?}
+\subsubsection{¿Qué hace a un buen Dataset?}
 
 \begin{itemize}
 	\item Debe cubrir una cantidad considerable de clips cortos y largos.
 	\item Libre de errores. Se debe eliminar cualquier archivo incorrecto o roto. 
 	\item Para escuchar una voz con la mayor naturalidad posible con todas las diferencias de frecuencia y tono, por ejemplo, usando diferentes signos de puntuación.
 	\item Es necesario que el \textit{dataset} cubra una buena parte de fonemas, difonemas y, en algunos idiomas, trifonemas. Si la cobertura de fonemas es baja, el modelo puede tener dificultades para pronunciar nuevas palabras difíciles.
+	\item Las muestras de la base de datos deben estar lo más limpio posible, es decir, se debe limpiar de ruido y cortar los espacios de tiempo entre expresiones,donde no se hable.
 	
 \end{itemize}
 
-\textbf{Cuban Voice Dataset}\\
+
+\subsubsection{Cuban Voice Dataset}
 La base de datos está conformada por 160 clips de audio con sus respectivas transcripciones recogidas en el archivo metadata.csv. Cada clip tiene una duración de 2 a 15 segundos, no más, para evitar sobrecargar los métodos que tienen que ver con la alineación.\\
 
 Los clips de audio poseen formato .wav y se organizan dentro de una carpeta de nombre \textit{wavs} de la siguiente forma:
@@ -45,7 +47,7 @@ Las transcripciones se recogen dentro del archivo metadata.csv. Donde audio1, au
 	audio4|Esta es mi transcripción 4.
 \end{center}
 
-El modelo sobre el que realizaremos el ajuste, está preentrenado sobre la base de datos en Español de \textit{The M-AiLabs Speech Dataset}, por tanto utilizaremos la misma estructura de este en la conformación de la base de datos con voces cubanas. Finalmente quedando la siguiente estructura:
+El modelo sobre el que se realiza el ajuste, está preentrenado sobre la base de datos en Español de \textit{The M-AiLabs Speech Dataset}, por tanto utilizaremos la misma estructura de este en la conformación de la base de datos con voces cubanas. Finalmente quedando la siguiente estructura:
 
 \begin{flushleft}
 	MyDataset/by$\_$book/female/[creador del dataset]/[nombre del hablante]
@@ -64,7 +66,6 @@ El modelo sobre el que realizaremos el ajuste, está preentrenado sobre la base 
 
 \textbf{RNNoise} es una biblioteca basada en una red neuronal para la eliminación de ruido en grabaciones, se utliza en este proyecto para obtener clips de audio libres de ruidos y con la frecuencia de muestreo deseada.
 
-Se realiza 
 
 
 
