--- a/thesis-main/document/Thesis.tex
+++ b/thesis-main/document/Thesis.tex
@@ -52,7 +52,7 @@
 
 \title{Sintetizador de Voz en Español con Voces Cubanas}
 \author{\\\vspace{0.25cm}Sandra Martos Llanes}
-\advisor{\\\vspace{0.25cm}Katy Castillo Rosado\\\vspace{0.2cm}Flavio Reyes}
+\advisor{\\\vspace{0.25cm}Lic. Katy Castillo Rosado\\\vspace{0.2cm}Dr.Cs. Flavio Reyes Díaz}
 \degree{Licenciado en Ciencia de la Computación}
 \faculty{Facultad de Matemática y Computación}
 \date{Fecha\\\vspace{0.25cm}\href{https://github.com/username/repo}{github.com/username/repo}}
