--- a/thesis-main/document/Bibliography.bib
+++ b/thesis-main/document/Bibliography.bib
@@ -182,5 +182,24 @@
   url     = {https://github.com/mozilla/TTS}
   }
 
+@misc{tordera2011linguistica,
+  title={Ling{\"u}{\'\i}stica computacional. Tecnolog{\'\i}as del habla},
+  author={Tordera Yllescas, Juan Carlos},
+  year={2011},
+  publisher={Valencia: Universitat de Val{\`e}ncia}
+}
 
+@phdthesis{rodriguez2013sintetizador,
+  title={Sintetizador de vocales sostenidas},
+  author={Rodr{\'\i}guez Le{\'o}n, Eddy},
+  year={2013},
+  school={Universidad Central" Marta Abreu" de Las Villas}
+}
+
+@article{hernandez2018sintesis,
+  title={S{\'\i}ntesis de voz esof{\'a}gica},
+  author={Hern{\'a}ndez Araujo, Alejandra and Araujo, Alejandra Hern{\'a}ndez},
+  year={2018},
+  publisher={Tecnologico de Monterrey}
+}
 
