--- a/thesis-main/document/Thesis.tex
+++ b/thesis-main/document/Thesis.tex
@@ -76,6 +76,7 @@
 \renewcommand{\lstlistingname}{Ejemplo de código}
 \renewcommand{\lstlistlistingname}{Ejemplos de código}
 
+\DeclareUnicodeCharacter{0301}{\'{e}}
 \begin{document}
 
 \frontmatter
