Document update, propuesta e implementación

--- a/thesis-main/document/Bibliography.bib
+++ b/thesis-main/document/Bibliography.bib
@@ -203,3 +203,10 @@
   publisher={Tecnologico de Monterrey}
 }
 
+@online{train-vits,
+  author  = {Coqui TTS},
+  title   = {Coqui Recipe to Train VITS},
+  url     = {https://github.com/coqui-ai/TTS/blob/dev/recipes/ljspeech/vits_tts/train_vits.py}
+  }
+
+
